# ocr-nlp

./: .gitignore  INSTALL.md  README.md  docker-compose.yml  package-lock.json
apps/mobile/: app.config.js  app.json  package-lock.json  package.json
apps/mobile/app/: _layout.js  index.js  upload.js
scripts/: install.ps1  install.sh
services/node-api/: .env.example  Dockerfile  package.json
services/node-api/src/: index.js
services/ocr-nlp/: Dockerfile  installed.txt  pyproject.toml  requirements.txt
services/ocr-nlp/src/: Dockerfile  fileTest.py  main.py  test_client.py
